# HNoCS

./: .gitignore  README.md
HNOCS/: .cproject  .oppbuildspec  CMakeLists.txt  HNOCS.files  HNoCs.files  HNoCs.includes  Makefile  Makefile.vc  NEWS  README  Remarks.txt  backup.sh  results_dir  runExample.sh  runOne.sh  saveResults.sh  tst.sh
HNOCS/examples/: README  run_nocs
HNOCS/simulations/: central_sched.exp  central_vs_bl.exp  comm_central_vs_baseline.ini  comm_fixed_n_random_flows.ini  comm_mesh_size.ini  cong_spread_c_v_b.exp  evaluation.exp  iniFiles  package.ned  run_output_omnetpp_blackscholes.ini  run_output_omnetpp_ferret.ini  run_status_omnetpp_blackscholes.ini  run_status_omnetpp_ferret.ini
HNOCS/simulations/CMPTraces/: blackscholes.core.1.trace  blackscholes.core.10.trace  blackscholes.core.11.trace  blackscholes.core.2.trace  blackscholes.core.3.trace  blackscholes.core.4.trace  blackscholes.core.5.trace  blackscholes.core.6.trace  blackscholes.core.7.trace  blackscholes.core.8.trace  blackscholes.core.9.trace  bodytrack.core.0.trace  bodytrack.core.1.trace  bodytrack.core.10.trace  bodytrack.core.11.trace  bodytrack.core.2.trace  bodytrack.core.3.trace  bodytrack.core.4.trace  bodytrack.core.5.trace  bodytrack.core.6.trace  bodytrack.core.7.trace  bodytrack.core.8.trace  bodytrack.core.9.trace  bs.core.0.trace  bs.core.10.trace  bs.core.4.trace  bs.core.5.trace  bs.core.6.trace  bs.core.8.trace  bs.core.9.trace  bs1.core.1.trace  bs1.core.10.trace  bs1.core.11.trace  bs1.core.5.trace  bs1.core.9.trace  canneal.core.0.trace  canneal.core.1.trace  canneal.core.10.trace  canneal.core.11.trace  canneal.core.2.trace  (+94 more)
HNOCS/simulations/CMPTraces-16threads-simsmall/: runTrace2cores  trace2cores
HNOCS/simulations/app2app/: app2app.ned  apps2noc2apps.ned  omnetpp.ini
HNOCS/simulations/async_example/: async_example.ini
HNOCS/simulations/baseline/: README  central_vs_baseline.ini  compare_msg_sizes.ini  fixed_n_random_flows.ini  mesh_sizes.ini  ref_bl2_rtr.ini  ref_bl_rtr.ini
HNOCS/simulations/blackscholes/: .tkenvrc  blackscholes.anf  omnetpp_blackscholes.ini
HNOCS/simulations/bodytrack/: bodytrack.anf  omnetpp_bodytrack.ini
HNOCS/simulations/canneal/: omnetpp_canneal.ini
HNOCS/simulations/central_sched/: central_vs_baseline.ini  compare_msg_sizes.ini  compare_num_reqs_per_cycle.ini  fixed_n_random_flows.ini  mesh_sizes.ini  sched_delay.ini
HNOCS/simulations/cmp/: README  omnetpp.ini  trace2cores
HNOCS/simulations/facesim/: omnetpp_facesim.ini
HNOCS/simulations/ferret/: omnetpp_ferret.ini
HNOCS/simulations/raytrace/: omnetpp_raytrace.ini
HNOCS/simulations/swaptions/: omnetpp_swaptions.ini
HNOCS/simulations/vips/: omnetpp_vips.ini
HNOCS/simulations/x264/: omnetpp_x264.ini
HNOCS/src/: App.msg  App_m.cc  App_m.h  CMP.msg  CMP_m.cc  CMP_m.h  Central.msg  Central_m.cc  Central_m.h  Makefile  NoCs.msg  NoCs_m.cc  NoCs_m.h  ResponseDB.cc  ResponseDB.h  SessionMeta.cc  SessionMeta.h  Utils.cc  Utils.h  cResponseHeadArrived.h  hnocs
HNOCS/src/cores/: AppNI.ned  App_Ifc.ned  CAppNI.ned  CNI.ned  CNI_Ifc.ned  CoreL1.cc  CoreL1.h  CoreL1.ned  DRAM.cc  DRAM.h  DRAM.ned  EchoApp.cc  EchoApp.h  EchoApp.ned  GenCore.ned  L2.cc  L2.h  L2.ned
HNOCS/src/topologies/: CentMesh.ned  Mesh_blackscholes.ned  Mesh_bodytrack.ned  Mesh_canneal.ned  Mesh_facesim.ned  Mesh_ferret.ned  Mesh_raytrace.ned  Mesh_swaptions.ned  Mesh_vips.ned  Mesh_x264.ned
HNOCS/utils/: deltas_no_router.py  ezexp  ezplot  genExprHistPlot  genExprXYPlot  getCrap.py  makeDist  sysHealth.sh  toTrace.py
HNOCS/utils/graphs/: .pydevproject  AnalysisThread.py  AnalyzeAllPorts.py  AnalyzeAllPortsGlobal.py  AnalyzeCommon.py  AnalyzeCommonGlobal.py  AnalyzeIfc.py  AnalyzeIntegral.py  AnalyzePorts.py  AnalyzePortsGlobal.py  DBManager.py  FromTo3D.py  JSONParser.py  (+3 more)
(+198 files in other folders)
